unpackaged/main/default/objects/pse__Billing_Event_Calculation__c/pse__Billing_Event_Calculation__c.object-meta.xml
<CustomObject>
    <label>Billing Event Calculation</label>
    <nameField>
        <displayFormat>BEC-{000000}</displayFormat>
        <label>Billing Event Calculation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Billing Event Calculations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>