unpackaged/main/default/objects/pse__Billing_Event_Calculation__c/fields/pse__Configuration__c.field-meta.xml
<CustomField>
    <fullName>pse__Configuration__c</fullName>
    <label>Configuration</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>