unpackaged/main/default/objects/pse__Billing_Event_Calculation__c/fields/pse__End_Date__c.field-meta.xml
<CustomField>
    <fullName>pse__End_Date__c</fullName>
    <label>End Date</label>
    <type>Date</type>
</CustomField>