unpackaged/main/default/objects/pse__Billing_Event_Calculation__c/fields/pse__Include_Prior_Periods__c.field-meta.xml
<CustomField>
    <fullName>pse__Include_Prior_Periods__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Include Prior Periods</label>
    <type>Checkbox</type>
</CustomField>