unpackaged/main/default/objects/pse__Billing_Event_Calculation__c/fields/pse__Locale_Information__c.field-meta.xml
<CustomField>
    <fullName>pse__Locale_Information__c</fullName>
    <label>Locale Information</label>
    <length>255</length>
    <type>Text</type>
</CustomField>