unpackaged/main/default/objects/pse__Billing_Event_Calculation__c/fields/pse__Project__c.field-meta.xml
<CustomField>
    <fullName>pse__Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project</label>
    <referenceTo>pse__Proj__c</referenceTo>
    <relationshipLabel>Billing Event Calculations</relationshipLabel>
    <relationshipName>Billing_Event_Calculations</relationshipName>
    <type>Lookup</type>
</CustomField>